Fix modal spacing issue

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -42,13 +42,13 @@ h1 {
   position: fixed;
   left: 0;
   top: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100dvw;
+  height: 100dvh;
   background-color: rgba(0, 0, 0, 0.85);
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 1rem;
   outline: none;
 }
 
